--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
   "dependencies": {
     "@genkit-ai/googleai": "^1.14.1",
     "@genkit-ai/next": "^1.14.1",
-    "@google/generative-ai": "^0.16.0",
-    "@googlemaps/js-api-loader": "^1.16.6",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -58,10 +56,10 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "polyline-encoded": "^0.0.9"
   },
   "devDependencies": {
-    "@types/google.maps": "^3.55.12",
     "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/react": "^18",
