--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "genkit": "^1.14.1",
     "idb": "^8.0.0",
     "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
