--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
+    "pbf": "^3.2.1",
+    "polyline-encoded": "^0.0.9",
+    "protobufjs": "^7.3.2",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -57,12 +60,13 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2",
-    "polyline-encoded": "^0.0.9"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/geojson": "^7946.0.14",
     "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
+    "@types/pbf": "^3.0.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "genkit-cli": "^1.14.1",
